// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expandable vertical with subsection 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="pf-:rg:"
    class="pf-v6-c-jump-links pf-m-vertical pf-m-expandable"
  >
    <div
      class="pf-v6-c-jump-links__main"
    >
      <div
        class="pf-v6-c-jump-links__header"
      >
        <div
          class="pf-v6-c-jump-links__toggle"
        >
          <button
            aria-expanded="false"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-:rh:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            id="pf-:rg:"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon pf-m-start"
            >
              <span
                class="pf-v6-c-jump-links__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="pf-v6-c-button__text"
            >
              Jump to section
            </span>
          </button>
        </div>
      </div>
      <ul
        aria-labelledby="pf-:rg:"
        class="pf-v6-c-jump-links__list"
        role="list"
      >
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:ri:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:rj:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Section with active subsection
                </span>
              </span>
            </a>
          </span>
          <ul
            class="pf-v6-c-jump-links__list"
            role="list"
          >
            <li
              aria-current="location"
              class="pf-v6-c-jump-links__item pf-m-current"
            >
              <span
                class="pf-v6-c-jump-links__link"
              >
                <a
                  class="pf-v6-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-:rk:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  href="#"
                >
                  <span
                    class="pf-v6-c-button__text"
                  >
                    <span
                      class="pf-v6-c-jump-links__link-text"
                    >
                      Active subsection
                    </span>
                  </span>
                </a>
              </span>
            </li>
            <li
              class="pf-v6-c-jump-links__item"
            >
              <span
                class="pf-v6-c-jump-links__link"
              >
                <a
                  class="pf-v6-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-:rl:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  href="#"
                >
                  <span
                    class="pf-v6-c-button__text"
                  >
                    <span
                      class="pf-v6-c-jump-links__link-text"
                    >
                      Inactive subsection
                    </span>
                  </span>
                </a>
              </span>
            </li>
            <li
              class="pf-v6-c-jump-links__item"
            >
              <span
                class="pf-v6-c-jump-links__link"
              >
                <a
                  class="pf-v6-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-:rm:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  href="#"
                >
                  <span
                    class="pf-v6-c-button__text"
                  >
                    <span
                      class="pf-v6-c-jump-links__link-text"
                    >
                      Inactive subsection
                    </span>
                  </span>
                </a>
              </span>
            </li>
          </ul>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:rn:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:ro:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`jumplinks centered 1`] = `
<DocumentFragment>
  <nav
    class="pf-v6-c-jump-links pf-m-center"
  >
    <div
      class="pf-v6-c-jump-links__main"
    >
      <div
        class="pf-v6-c-jump-links__header"
      />
      <ul
        class="pf-v6-c-jump-links__list"
        role="list"
      >
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:r5:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          aria-current="location"
          class="pf-v6-c-jump-links__item pf-m-current"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:r6:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Active section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:r7:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`jumplinks with label 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="pf-:r8:"
    class="pf-v6-c-jump-links pf-m-center"
  >
    <div
      class="pf-v6-c-jump-links__main"
    >
      <div
        class="pf-v6-c-jump-links__header"
      >
        <div
          class="pf-v6-c-jump-links__label"
          id="pf-:r8:"
        >
          Jump to section
        </div>
      </div>
      <ul
        aria-labelledby="pf-:r8:"
        class="pf-v6-c-jump-links__list"
        role="list"
      >
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:r9:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          aria-current="location"
          class="pf-v6-c-jump-links__item pf-m-current"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:ra:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Active section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:rb:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`simple jumplinks 1`] = `
<DocumentFragment>
  <nav
    class="pf-v6-c-jump-links"
  >
    <div
      class="pf-v6-c-jump-links__main"
    >
      <div
        class="pf-v6-c-jump-links__header"
      />
      <ul
        class="pf-v6-c-jump-links__list"
        role="list"
      >
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:r1:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          aria-current="location"
          class="pf-v6-c-jump-links__item pf-m-current"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:r2:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Active section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:r3:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`vertical with label 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="pf-:rc:"
    class="pf-v6-c-jump-links pf-m-vertical"
  >
    <div
      class="pf-v6-c-jump-links__main"
    >
      <div
        class="pf-v6-c-jump-links__header"
      >
        <div
          class="pf-v6-c-jump-links__label"
          id="pf-:rc:"
        >
          Jump to section
        </div>
      </div>
      <ul
        aria-labelledby="pf-:rc:"
        class="pf-v6-c-jump-links__list"
        role="list"
      >
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:rd:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          aria-current="location"
          class="pf-v6-c-jump-links__item pf-m-current"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:re:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Active section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-:rf:"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;
